Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -5645,11 +5645,6 @@ panel-toplevel.background button:not(#tasklist-button) {
 .thunar toolbar.horizontal button image {
   -gtk-icon-transform: scale(0.72); }
 
-scrolledwindow.sidebar treeview.view {
-  background: #151519;
-  color: #98abb2;
-  padding: 1.5px; }
-
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar > button.toggle.path-bar-button, .thunar toolbar .path-bar-button {
   margin-top: 7px;
@@ -5669,15 +5664,19 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
   box-shadow: none; }
 
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view:hover {
-  background: #0e0e11; }
-window.thunar paned > scrolledwindow treeview.view:selected {
-  border-radius: 23px;
-  background: linear-gradient(to right, #00c6ff, #0072ff);
-  box-shadow: 0px 2px 4px rgba(0, 114, 255, 0.98);
-  color: white;
-  border-radius: 0;
-  box-shadow: none; }
+.thunar scrolledwindow.sidebar treeview.view {
+  background: #151519;
+  padding: 1.5px;
+  color: #98abb2; }
+  .thunar scrolledwindow.sidebar treeview.view:hover {
+    background: #25262d; }
+  .thunar scrolledwindow.sidebar treeview.view:selected {
+    border-radius: 23px;
+    background: linear-gradient(to right, #00c6ff, #0072ff);
+    box-shadow: 0px 2px 4px rgba(0, 114, 255, 0.98);
+    color: white;
+    border-radius: 0;
+    box-shadow: none; }
 
 window.thunar toolbar#location-toolbar entry {
   border-radius: 10px; }
